<resources>
    <string name="app_name">Mon Suivi de Sante</string>

    <string name="logo_app">Logo de l\'application</string>
    <string name="coucher">Vous vous êtes couchez à :</string>
    <string name="reveil">Vous vous êtes réveiller à :</string>
    <string name="objectif_sommeil">L\'objectif est de ce couchez à :</string>
    <string name="demande_reveil">Vous voulez vous réveillez à :</string>
    <string name="demande_coucher">Vous voulez vous couchez à :</string>
    <string name="image_de_motivation">image de motivation</string>
    <string name="heure_coucher_dft">22h00</string>
    <string name="heure_reveil_dft">8h00</string>
    <string name="demande_reveil_reel">Vous vous êtes réveiller à ?</string>
    <string name="demande_coucher_reel">Vous vous êtes couchez à ?</string>
    <string name="objectif_reveil">L\'objectif est de ce réveillez à : </string>
    <string name="desc_bouton_mes_informations">bouton mes informations</string>
    <string name="mes_informations">Mes informations</string>
    <string name="desc_bouton_pas">bouton pas</string>
    <string name="pas">Pas</string>
    <string name="desc_bouton_calories">bouton calories</string>
    <string name="calories">Calories</string>
    <string name="desc_bouton_sommeil">bouton sommeil</string>
    <string name="sommeil">Sommeil</string>
    <string name="msg_motivation">msg motivation azerty qwerty sdfqgd rliv klnjvfw kjbgdfw rfbjhsd jldw ezoq</string>
    <string name="desc_bouton_modification">bouton de modification</string>
    <string name="calorie_depense">Mes calories ingéré aujourd’hui</string>
    <string name="desc_image_flamme">image flamme</string>
    <string name="calorie_en_kcal"> kcal</string>
    <string name="calories_depense_activite">Selon votre type d’activité physique voici votre métabolisme de base</string>
    <string name="demande_calories_consomme">Combien de calories avez-vous consommées lors de votre repas ?</string>
    <string name="calorie_consome">200 kcal</string>
    <string name="demande_activite">Quelle activité avez vous faites ?</string>
    <string name="champ_modif_activite">Choisissez une activité</string>
    <string name="desc_bouton_liste_deroulante">bouton liste déroulante</string>
    <string name="demande_duree_activite">Pendant combien de temps ?</string>
    <string name="champ_modification_dure_activite">1:00</string>
    <string name="explication_choix_activite">Choisissez une activité</string>
    <string name="explication_choix_duree">Choisissez une durée</string>
    <string name="pop_up_demande_heure_coucher">À quelle heure voulez vous vous couchez ?</string>
    <string name="pop_up_demande_heure_coucher_reel">À quelle heure vous êtes vous couchez ?</string>
    <string name="pop_up_affichage_reveil_dfl">08:00</string>
    <string name="pop_up_demande_heure_reveil">À quelle heure voulez vous vous reveillez ?</string>
    <string name="pop_up_demande_heure_reveil_reel">À quelle heure vous êtes vous reveillez ?</string>
    <string name="pop_up_affichage_coucher_dfl">22:00</string>
    <string name="question_notif_coucher">C\'est l\'heure de se coucher</string>
    <string name="rappel_notif_coucher">N\'oubliez pas d\'écrire l\'heure à la qu\'elle vous vous êtes réveillez et couchez</string>
    <string name="dec_img_lune">Image lune</string>
    <string name="explication_format_heure">hh:mm</string>
    <string name="icon_account">Icon Account</string>
    <string name="seconnceter">Se connecter</string>
    <string name="inscription_invitation">Vous n\'avez pas de compte? Inscrivez-vous</string>
    <string name="identifiant">Identifiant</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="ok">OK</string>
    <string name="identifiant_ou_mot_de_passe_incorrect">Identifiant ou mot de passe incorrect.</string>
    <string name="erreur">Erreur</string>
    <string name="entrer_information">Saisissez vos informations</string>




    <string name="content_description_logo_app">Logo App</string>
    <string name="utilite">Ces informations sont utiles au bon fonctionnement de l\'application</string>

    <string name="pop_up_text_nom">Quelle est votre nouveau nom ?</string>
    <string name="pop_up_hint_nom">Entrez votre nouveau nom ici</string>
    <string name="pop_up_text_prenom">Quelle est votre nouveau prénom ?</string>
    <string name="pop_up_hint_prenom">Entrez votre nouveau prénom ici</string>
    <string name="pop_up_text_taille">Quelle est votre taille ?</string>
    <string name="pop_up_hint_taille">Entrez votre taille ici (en cm)</string>
    <string name="pop_up_text_age">Quelle est votre âge ?</string>
    <string name="pop_up_hint_age">Entrez votre âge ici</string>
    <string name="pop_up_text_poids">Combien pesez vous ?</string>
    <string name="pop_up_hint_poids">Entrez votre poids ici (en kg)</string>
    <string name="bienvenue">Bienvenue (prénom de l\'utilisateur)</string>

    <string name="age">Age</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="poids">Poids (en kg)</string>


    <string name="confirmer">Confirmer</string>
    <string name="creercompte">Créer votre compte</string>
    <string name="idenfiant">Identifiant</string>
    <string name="motdepass">Mot de passe</string>

    <string name="taille">Taille (en cm)</string>
    <string name="genre_prompt">Genre</string>
    <string name="vous_etes_prompt">Vous êtes ?</string>

    <string name="hello_icon">Hello Icon</string>
    <string name="choix_genre">Sexe</string>


    <string-array name="genre_array">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>

    <string-array name="type_de_personne_array">
        <item>Sédentaire (peu ou pas d\'exercie)</item>
        <item>Léger (exercice léger/sport 1 à 3 jours/semaine)</item>
        <item>Modéré (exercice modéré/sport 3 à 5 jours/semaine)</item>
        <item>Actif (exercice intense/sport 6 à 7 jours/semaine</item>
        <item>Très actif (exercice intense quotidien ou activité physique très difficile)</item>
    </string-array>



    <string name="pop_up_text_obj_journalier">Quelle est votre objectif de pas journalier ?</string>
    <string name="pop_up_hint_obj_journalier">2000 pas</string>
    <string name="pop_up_text_obj_mensuelle">Quelle est votre objectif de pas mensuelle ?</string>
    <string name="pop_up_hint_obj_mensuelle">28000 pas</string>
    <string name="pop_up_text_obj_hebdomadaire">Quelle est votre objectif de pas hebdomadaire ?</string>
    <string name="pop_up_hint_obj_hebdomadaire">7000 pas</string>
    <string name="icone_sante">Health Icon</string>
    <string name="message_motivation">Votre message de motivation ici</string>
    <string name="mesobjectifsjournaliers">Mes objectifs journaliers :</string>
    <string name="mesobjectifshebdo">Mes objectifs hebdomadaires :</string>
    <string name="mesobjectifsMensuels">Mes objectifs mensuels :</string>
    <string name="saisir_nb_pas">Saisir pas</string>
    <string name="nombre_de_pas_fait">Le nombre de pas que je fais :</string>
    <string name="pop_up_hint_calories">200 kcal</string>
    <string name="pop_up_text_calorie">Combien de calories avez vous consommez (en kcal) ?</string>
    <string name="annulation">Annuler</string>
    <string name="validation">OK</string>
</resources>
