<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mesinfo_inscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/content_description_logo_app"
                android:src="@drawable/logo_app" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrer_information"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utilite"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/nom_mesinfo_inscr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/prenom_mesinfo_inscr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:inputType="textPersonName"
            android:autofillHints="givenName"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/age_mesinfo_inscr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:layout_marginTop="8dp"
            android:autofillHints="birthDateDay|birthDateMonth|birthDateYear"/>

        <EditText
            android:id="@+id/poids_mesinfo_inscr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/poids"
            android:inputType="number"
            android:autofillHints="weight"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/taille_mesinfo_inscr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taille"
            android:inputType="number"
            android:autofillHints="height"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinner_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/genre_array"

            android:prompt="@string/genre_prompt" />


        <Spinner
            android:id="@+id/spinner_vous_etes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type_de_personne_array"
            android:prompt="@string/vous_etes_prompt" />


        <Button
            android:id="@+id/boutton_conf_mesinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmer"
            android:backgroundTint="@color/black"
            android:textColor="#FFFFFF"
            android:padding="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>






    </LinearLayout>



</RelativeLayout>