<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page_inscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_app"
                android:contentDescription="@string/content_description_logo_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creercompte"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/identifiant_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idenfiant"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/password_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/motdepass"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="password"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/inscription2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sinscrire"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:textColor="#FFFFFF"
            android:padding="20dp"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

</RelativeLayout>