<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/background_pop_up"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_pop_up"
        android:text="@string/pop_up_text_poids"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:id="@+id/saisie_user"
        android:hint="@string/pop_up_hint_poids"
        android:autofillHints="name"
        android:layout_margin="10dp"
        android:padding="3dp"
        android:inputType="time"
        app:layout_constraintTop_toBottomOf="@id/text_pop_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/bouton_annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annulation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bouton_ok"
        app:layout_constraintTop_toBottomOf="@id/saisie_user"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bouton_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bouton_annuler"
        app:layout_constraintTop_toBottomOf="@id/saisie_user"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>